# leverage-scraper

./: .gitignore  README.md  compose.yml  pyproject.toml  scrapy.cfg
Leverage/: items.py  middlewares.py  pipelines.py  settings.py
Leverage/spiders/: dolben_indexer.py  dolben_spider.py  repli360_index_spider.py  repli360_spider.py  spider.py  udr_index_spider.py  udr_indexer.py  udr_spider.py  utils.py
Leverage/spiders/crawlers/: __init__.py  _spider.py  dolben_spider.py  repli360_spider.py  udr_spider.py
Leverage/spiders/indexers/: __init__.py  _indexer.py  dolben_indexer.py  udr_indexer.py
sql/: data.sql  schema.sql
tests/: conftest.py  test_dolben_indexer.py  test_repli360_spider.py
